tests/baselines/reference/indexWithoutParamType2.errors.txt
tests/cases/compiler/indexWithoutParamType2.ts(3,5): error TS1166: Computed property names are not allowed in class property declarations.
tests/cases/compiler/indexWithoutParamType2.ts(3,6): error TS2304: Cannot find name 'x'.


==== tests/cases/compiler/indexWithoutParamType2.ts (2 errors) ====
    class C {
        // Used to be indexer, now it is a computed property
        [x]: string
        ~~~
!!! error TS1166: Computed property names are not allowed in class property declarations.
         ~
!!! error TS2304: Cannot find name 'x'.
    }